--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -13,13 +13,14 @@
     background-color: rgba(238, 238, 238, 0.1);
   }
 
-  .project_side_view_2, .project_side_view_1 {
+  .project_side_view_2,
+  .project_side_view_1 {
     display: flex;
     align-items: center;
     min-height: 450px;
     width: 100%;
     padding: 0 1.5%;
-    
+
     .project_img {
       width: 56vw;
 
@@ -57,6 +58,17 @@
         }
       }
     }
+  }
+}
 
+@media (max-width: 480px) {
+  #project-list {
+    margin: 0 1vw 0 20vw;
+
+    .project_info {
+      h5 {
+        font-size: 50%;
+      }
+    }
   }
 }
