--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 20px;
-  margin: 1% 3% 1% 7%;
+  // margin-top: 20px;
+  // margin: 1% 3% 1% 7%;
+  gap: 2%;
 
   .project_side_view_1 {
     background-color: rgba(108, 122, 137, 0.1);
@@ -19,7 +20,7 @@
     align-items: center;
     min-height: 450px;
     width: 100%;
-    padding: 0 1.5%;
+    padding-bottom: 5%;
 
     .project_img {
       width: 56vw;
@@ -81,8 +82,12 @@
       .project_info {
         width: 100%;
 
+        p {
+          padding: 0 5%;
+        }
+
         h5 {
-          font-size: 50%;
+          font-size: 110%;
         }
       }
     }
