target media under 769, target proejct--list set margin, change gap. in nth child even, set flex direction to be row-reverse. target proejct-info  set padding left 5%

--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -62,6 +62,21 @@
   }
 }
 
+@media (max-width: 769px) {
+  #project-list {
+    margin: 0 6vw 0 14vw;
+    gap: 1%;
+
+    :nth-child(even) {
+      flex-direction: row-reverse;
+
+      .project_info {
+        padding-left: 5%;
+      }
+    }
+  }
+}
+
 @media (max-width: 480px) {
   #project-list {
     margin: 0 1vw 0 20vw;
