--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -6,16 +6,15 @@
   // margin: 1% 3% 1% 7%;
   gap: 2%;
 
-  .project_side_view_1 {
-    background-color: rgba(108, 122, 137, 0.1);
-  }
+  // .project_side_view_1 {
+  //   background-color: rgba(108, 122, 137, 0.1);
+  // }
 
-  .project_side_view_2 {
-    background-color: rgba(238, 238, 238, 0.1);
-  }
+  // .project_side_view_2 {
+  //   background-color: rgba(238, 238, 238, 0.1);
+  // }
 
-  .project_side_view_2,
-  .project_side_view_1 {
+  .project_side_view {
     display: flex;
     align-items: center;
     min-height: 450px;
@@ -81,8 +80,7 @@
   #project-list {
     margin: 0 1vw 0 20vw;
 
-    .project_side_view_1,
-    .project_side_view_2 {
+    .project_side_view_1 {
       flex-direction: column;
 
       .project_img {
