add specificity for li elements within work-info. change to to target active

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -211,8 +211,10 @@
       }
 
       .work-info {
-        li {
-          font-size: 65%;
+        &.active {
+          li {
+            font-size: 65%;
+          }
         }
         h3 {
           font-size: 90%;
