within media 480, add &.selceted to reset padding stlying, change to padding left only

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -203,6 +203,10 @@
   .experience_grid {
     padding: 0 0 0 17%;
 
+    &.selected {
+      padding-left: 9%;
+    }
+
     .MuiPaper-root {
       h4 {
         font-size: 80%;
