add new query for media min 1026. set fixed dimensions for button

--- a/src/Styles/toTop.scss
+++ b/src/Styles/toTop.scss
@@ -12,6 +12,15 @@
   }
 }
 
+@media (min-width: 1026px) {
+  #to_top {
+    .MuiSvgIcon-root {
+      height: 110px;
+      width: 110px;
+    }
+  }
+}
+
 @media (max-width: 1026px) {
   #to_top {
     .MuiSvgIcon-root {
