--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -65,6 +65,10 @@
   #project-list {
     margin: 0 6vw 0 10vw;
 
+    .project_side_view {
+      max-width: 1025px;
+    }
+
     :nth-child(odd) {
       .project_info {
         padding-right: 5%;
@@ -76,6 +80,11 @@
 
       .project_info {
         padding-left: 5%;
+      }
+    }
+    .project_side_view {
+      .MuiButton-root {
+        flex-direction: row;
       }
     }
   }
