within mexia 480, fix call to project_side_view that had 1 appended to class name. in project_info move padding from p elements to proejct_info

--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -92,7 +92,7 @@
   #project-list {
     margin: 0 1vw 0 20vw;
 
-    .project_side_view_1 {
+    .project_side_view {
       flex-direction: column;
 
       .project_img {
@@ -106,10 +106,7 @@
 
       .project_info {
         width: 100%;
-
-        p {
-          padding: 0 5%;
-        }
+        padding: 0 5%;
 
         h5 {
           font-size: 110%;
