create media query for 480, target dimensions for MuiSvgIcon

--- a/src/Styles/toTop.scss
+++ b/src/Styles/toTop.scss
@@ -11,3 +11,12 @@
     color: gold;
   }
 }
+
+@media (max-width: 480px) {
+  #to_top {
+    .MuiSvgIcon-root {
+      height: 15vw;
+      width: 15vw;
+    }
+  }
+}
