target media under 1026, set dimensions for MuiSvgIcon. target 4808 media add right and bottom stlying. within to_top, change right and bottom from fixed sizing 50px to 10vw

--- a/src/Styles/toTop.scss
+++ b/src/Styles/toTop.scss
@@ -2,8 +2,8 @@
   position: fixed;
   height: 50px;
   width: 50px;
-  right: 50px;
-  bottom: 50px;
+  right: 10vw;
+  bottom: 10vw;
 
   .MuiSvgIcon-root {
     width: 7vw;
@@ -12,8 +12,29 @@
   }
 }
 
+@media (max-width: 1026px) {
+  #to_top {
+    .MuiSvgIcon-root {
+      height: 16vw;
+      width: 16vw;
+    }
+  }
+}
+
+@media (max-width: 769px) {
+  #to_top {
+    .MuiSvgIcon-root {
+      height: 12vw;
+      width: 12vw;
+    }
+  }
+}
+
 @media (max-width: 480px) {
   #to_top {
+    right: 5vw;
+    bottom: 5vw;
+
     .MuiSvgIcon-root {
       height: 15vw;
       width: 15vw;
