remove comments, remove gap from proejct list, add gap to proejct list in media 480

--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   // margin-top: 20px;
   // margin: 1% 3% 1% 7%;
-  gap: 2%;
+  // gap: 2%;
 
   // .project_side_view_1 {
   //   background-color: rgba(108, 122, 137, 0.1);
@@ -94,10 +94,6 @@
   #project-list {
     margin: 0 6vw 0 10vw;
 
-    .project_side_view {
-      max-width: 1025px;
-    }
-
     :nth-child(odd) {
       .project_info {
         padding-right: 5%;
@@ -122,13 +118,13 @@
 @media (max-width: 769px) {
   #project-list {
     margin: 0 6vw 0 14vw;
-    gap: 1%;
   }
 }
 
 @media (max-width: 480px) {
   #project-list {
     margin: 0 1vw 0 20vw;
+    gap: 2%;
 
     .project_side_view {
       flex-direction: column;
