target muipaper root, remove margin settings, and change to margin bottom 2%. remove width setting. add margin to skill-info-list. change media 769 muipaperroot to have width 65%

--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -11,8 +11,7 @@
     color: white;
     border: 1px solid gold;
     border-radius: 25px;
-    margin: 20px 10px 20px 10px;
-    width: 420px;
+    margin-bottom: 2%;
 
     &:hover {
       background-color: rgba(101, 98, 98, 0.906);
@@ -29,7 +28,7 @@
       display: flex;
       flex-wrap: wrap;
       width: 100%;
-      margin-left: 15%;
+      margin: 0 0 0 15%;
       padding-left: 0px;
 
       li {
@@ -59,7 +58,7 @@
 
 @media (max-width: 769px) {
   #skills-list {
-    padding-top: 7%;
+    padding-top: 0%;
 
     .MuiPaper-root {
       width: 65%;
