--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -1,6 +1,6 @@
 #skills-list {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   align-self: center;
@@ -46,6 +46,21 @@
         &::marker {
           font-size: 6vw;
         }
+      }
+    }
+  }
+}
+@media (min-width: 1026px) {
+  #skills-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    .MuiPaper-root {
+      width: 45%;
+      min-height: 300px;
+
+      :nth-last-child(-n) {
+        width: 80%;
       }
     }
   }
