target last child of skills list, set width to 80% and set li element widths

--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -59,8 +59,14 @@
       width: 45%;
       min-height: 300px;
 
-      :nth-last-child(-n) {
+      &:last-child {
         width: 80%;
+
+        .skill-info-list {
+          li {
+            width: 25%;
+          }
+        }
       }
     }
   }
