inside media 1026, target skill info list marker and set fixed font size. target first child and set margin right to be 20px. change last child margin left to be 10%

--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -59,10 +59,23 @@
       width: 45%;
       min-height: 300px;
 
+      .skill-info-list {
+        li {
+          &::marker {
+            font-size: 60px;
+          }
+        }
+      }
+
+      &:nth-child(n) {
+        margin-right: 20px;
+      }
+
       &:last-child {
         width: 80%;
 
         .skill-info-list {
+          margin-left: 10%;
           li {
             width: 25%;
           }
