--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -54,10 +54,12 @@
   #skills-list {
     flex-direction: row;
     flex-wrap: wrap;
+    margin-left: 50px;
 
     .MuiPaper-root {
       width: 45%;
       min-height: 300px;
+      max-width: 450px;
 
       .skill-info-list {
         li {
@@ -71,8 +73,15 @@
         margin-right: 20px;
       }
 
+      &:nth-child(2) {
+        ul {
+          padding-top: 20px;
+        }
+      }
+
       &:last-child {
         width: 80%;
+        max-width: 780px;
 
         .skill-info-list {
           margin-left: 10%;
