--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -130,6 +130,14 @@
 
 @media (min-width: 1026px) {
   .experience_grid {
+    .work-info {
+      .job-description-list {
+        li {
+          font-size: 20px;
+        }
+      }
+    }
+
     .experience_grid_card {
       img {
         height: 300px;
