change media query from 900 to 1025. add padding top to same query for about

--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -100,8 +100,10 @@
   }
 }
 
-@media (max-width: 928px) {
+@media (max-width: 1025px) {
   #About {
+    padding-top: 9vw;
+
     #about-description {
       .MuiCardContent-root {
         .intro_container {
