set default font sizes for li, h3 and p

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -82,7 +82,7 @@
     margin: 0 2%;
 
     li {
-      font-size: 3vw;
+      font-size: 2.2vw;
     }
 
     .position_header {
@@ -96,6 +96,11 @@
 
       h3 {
         color: gold;
+        font-size: 3.4vw;
+      }
+
+      p {
+        font-size: 2.6vw;
       }
     }
 
