remove comments and addnew target for h3 inside details_toggle to set font size

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -35,16 +35,6 @@
     font-size: 2.3vh;
     align-self: center;
 
-    // &:hover {
-    //   background-color: rgba(101, 98, 98, 0.906) !important;
-    //   color: gold !important;
-
-    //   .position_header,
-    //   h3 {
-    //     color: orange;
-    //   }
-    // }
-
     .MuiCardMedia-root {
       height: 25%;
     }
@@ -110,6 +100,10 @@
       margin-top: -3%;
       align-items: center;
 
+      h3 {
+        font-size: 3.4vw;
+      }
+
       .MuiSvgIcon-root {
         color: gold;
       }
@@ -168,10 +162,6 @@
     .MuiPaper-root {
       width: 73vw;
       margin-left: 9vw;
-
-      // .MuiCardMedia-root {
-      //   height: 25%;
-      // }
 
       .work-info {
         gap: 3vw;
