target media at 1026, set width for MuiPaper root. set font size for nested h2 and h4 elements. target position header inside work-info and set h3 font size

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -53,7 +53,7 @@
     h2 {
       background: gold;
       color: black;
-      font-size: 25px;
+      font-size: 4vw;
       margin-top: 0px;
       margin-bottom: 10px;
     }
@@ -129,10 +129,28 @@
 
 @media (min-width: 1026px) {
   .experience_grid {
-    .work-info {
-      .job-description-list {
-        li {
-          font-size: 20px;
+    .MuiPaper-root {
+      width: 850px;
+
+      h2 {
+        font-size: 35px;
+      }
+
+      h4 {
+        font-size: 25px;
+      }
+
+      .work-info {
+        .position_header {
+          h3 {
+            font-size: 25px;
+          }
+        }
+
+        .job-description-list {
+          li {
+            font-size: 20px;
+          }
         }
       }
     }
