in media 1026, target p and h3 to set font size, change job description font size

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -145,11 +145,21 @@
           h3 {
             font-size: 25px;
           }
+
+          p {
+            font-size: 20px;
+          }
+        }
+
+        .details_toggle {
+          h3 {
+            font-size: 19px;
+          }
         }
 
         .job-description-list {
           li {
-            font-size: 20px;
+            font-size: 18px;
           }
         }
       }
